<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTextHungry"
        android:textSize="@dimen/textViewLargeSize"
        android:textColor="@color/tittleColor"
        android:fontFamily="monospace"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTextFoodWasteManagement"
        android:textColor="@color/black"/>
    <ImageView
        android:layout_width="@dimen/doveWidth"
        android:layout_height="@dimen/doveHeight"
        android:src="@drawable/dove"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTextFoodYouWasteIsAnotherPersonMeal"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/bottomMargin"/>
    <Button
        android:id="@+id/mainActivityButtonGuestLogin"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:text="@string/buttonTextGuestLogin"
        android:background="@drawable/button_shape"
        android:padding="@dimen/buttonTextPadding"
        android:layout_marginBottom="@dimen/bottomMargin"
        android:onClick="goToGuestLoginPage"/>
    <Button
        android:id="@+id/mainActivityButtonAgentLogin"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:text="@string/buttonTextAgentLogin"
        android:padding="@dimen/buttonTextPadding"
        android:background="@drawable/button_shape"
        android:layout_marginBottom="@dimen/bottomMargin"
        android:onClick="goToAgentLoginPage"/>
    <Button
        android:id="@+id/mainActivityButtonCheckForFood"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:text="@string/buttonTextCheckForFood"
        android:visibility="gone"
        android:padding="@dimen/buttonTextPadding"
        android:background="@drawable/button_shape"
        android:layout_marginBottom="@dimen/bottomMargin"
        android:onClick="goToSearchFoodByAgent"/>
    <Button
        android:id="@+id/mainActivityButtonSubmitFoodDetails"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:text="@string/buttonTextSubmitFoodDetail"
        android:padding="@dimen/buttonTextPadding"
        android:background="@drawable/button_shape"
        android:layout_marginBottom="@dimen/bottomMargin"
        android:onClick="goToSubmitFoodDetailsByGuest"
        android:visibility="gone"/>
    <Button
        android:id="@+id/mainActivityButtonLogout"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:text="@string/buttonTextLogout"
        android:padding="@dimen/buttonTextPadding"
        android:background="@drawable/button_shape"
        android:layout_marginBottom="@dimen/bottomMargin"
        android:onClick="logout"
        android:visibility="gone"/>
</LinearLayout>