<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTextRegistration"
        android:textSize="@dimen/textViewLargeSize"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/bottomMargin"/>
    <EditText
        android:id="@+id/agentRegistrationEditTextUserName"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:hint="@string/editTextHintEnterYourName"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_shape"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin"
        android:padding="@dimen/padding"/>
    <EditText
        android:id="@+id/agentRegistrationEditTextUserPassword"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:hint="@string/editTextHintEnterPassword"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_shape"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin"
        android:padding="@dimen/padding"/>
    <EditText
        android:id="@+id/agentRegistrationEditTextUserPhone"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:hint="@string/editTextHintEnterMobileNumber"
        android:inputType="phone"
        android:background="@drawable/edit_text_shape"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin"
        android:padding="@dimen/padding"/>
    <EditText
        android:id="@+id/agentRegistrationEditTextUserLocality"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:hint="@string/editTextHintEnterTheLocality"
        android:inputType="text"
        android:background="@drawable/edit_text_shape"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin"
        android:padding="@dimen/padding"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/register"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center"
        android:onClick="saveAgentData"/>
</LinearLayout>