<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/bottomMargin">
        <ImageView
            android:layout_width="@dimen/backButtonWidth"
            android:layout_height="@dimen/backButtonHeight"
            android:src="@drawable/back_button"
            android:onClick="back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonTextGuestLogin"
            android:textSize="@dimen/textViewLargeSize"
            android:layout_margin="@dimen/margin"/>
        <ImageView
            android:layout_width="@dimen/doveWidth"
            android:layout_height="@dimen/doveHeight"
            android:src="@drawable/dove"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/guestLoginEditTextUserPhone"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/editTextHintEnterMobileNumber"
        android:inputType="phone"
        android:maxLength="10"
        android:layout_gravity="center"
        android:padding="@dimen/padding"
        android:layout_marginBottom="@dimen/bottomMargin"/>
    <EditText
        android:id="@+id/guestLoginEditTextUserPassword"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/editTextHintEnterPassword"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:padding="@dimen/padding"/>
    <ImageView
        android:layout_width="@dimen/loginImageWidth"
        android:layout_height="@dimen/loginImageHeight"
        android:src="@drawable/login_icon"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center"
        android:onClick="guestLogin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTextNewUser"
        android:layout_gravity="center"
        android:textSize="@dimen/textViewMediumSize"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/register"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center"
        android:onClick="guestRegistration"/>
</LinearLayout>